--- a/wishlist/public/stylesheets/style.css
+++ b/wishlist/public/stylesheets/style.css
@@ -4,6 +4,11 @@
     box-sizing: border-box;
 }
 
+a {
+    text-decoration: none;
+    color: #fefaff;
+}
+
 body {
     background: #ffffff;
     font-family: 'Poppins', 'sans-serif';
