--- a/wishlist/views/header.jade
+++ b/wishlist/views/header.jade
@@ -2,18 +2,20 @@ block header
     header 
         div(class="logo")
             a(href="/") 
-                h2="Maganets"
+                h2="MagaNets"
         section 
             div(class="menu")
-                div(class="menu__option")
+                div(class="option")
                     i(class="fas fa-map-marker-alt")
                     span="cidade: São Paulo"
-                div(class="menu__option")
+                div(class="option")
                     i(class="fas fa-phone-alt")
                     span="central de atendimento"
-                div(class="menu__option")
+                div(class="option")
                     a(href="/wishlist")
                         i(class="fas fa-heart")
                         span="lista de desejos" 
-            div(class="search")
-                input(type="text" placeholder="&#f002; Busca")
+            div(class="search-container")
+                div(class="search")
+                    i(class="fas fa-search")
+                    input(type="text" id="search-input" placeholder="Busca")
