--- a/wishlist/public/stylesheets/style.css
+++ b/wishlist/public/stylesheets/style.css
@@ -1,189 +1,178 @@
 @import url("https://fonts.googleapis.com/css2?family=Mulish:wght@300;400;700;800&display=swap");
+:root {
+  --active: red;
+  --gray: #fefaff;
+  --purple: #5a2d82;
+  --dark-gray: #a1a1a1;
+  --background: #ffffff;
+  --details: #e7d51c;
+}
+
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-    background: #ffffff;
-    font-family: "Mulish", sans-serif;
+  background: var(--background);
+  font-family: "Mulish", sans-serif;
 }
-
 body a {
-    text-decoration: none;
-    color: #fefaff;
+  text-decoration: none;
+  color: var(--gray);
 }
-
 body i {
-    cursor: pointer;
+  cursor: pointer;
 }
-
 body header {
-    background-color: #5a2d82;
-    color: #fefaff;
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    padding: 1rem 0.4rem 1.5rem 0.4rem;
+  background-color: var(--purple);
+  color: var(--gray);
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  padding: 1rem 0.4rem 1.5rem 0.4rem;
 }
-
 body header .menu .option {
-    cursor: pointer;
+  cursor: pointer;
 }
-
 body header .menu .option i {
-    margin-right: 0.5rem;
+  margin-right: 0.5rem;
 }
-
 body header .menu .option i.fa-phone-alt {
-    transform: rotate(90deg);
+  transform: rotate(90deg);
 }
-
 body header .search-container {
-    padding-top: 0.5rem;
-    display: flex;
-    justify-content: center;
+  padding-top: 0.5rem;
+  display: flex;
+  justify-content: center;
 }
-
 body header .search-container .search {
-    background-color: white;
-    border-radius: 0.2rem;
-    display: flex;
-    align-items: center;
-    padding-left: 0.5rem;
-    width: 22rem;
+  background-color: var(--background);
+  border-radius: 0.2rem;
+  display: flex;
+  align-items: center;
+  padding-left: 0.5rem;
+  width: 22rem;
 }
-
 body header .search-container .search i {
-    color: #a1a1a1;
+  color: var(--dark-gray);
 }
-
 body header .search-container .search input {
-    border: none;
-    outline: none;
-    width: 98%;
-    padding: 0.5rem;
-    border-radius: 0.2rem;
-    font-weight: 900;
+  border: none;
+  outline: none;
+  width: 98%;
+  padding: 0.5rem;
+  border-radius: 0.2rem;
+  font-weight: 900;
+  font-family: "Mulish", sans-serif;
 }
-
 body main {
-    margin: auto;
-    padding: 2rem 1rem 1rem 1rem;
-    width: min(90vw, 910px);
+  margin: auto;
+  padding: 2rem 1rem 1rem 1rem;
+  width: min(90vw, 910px);
 }
-
 body main .products-container {
-    width: 100%;
-    margin-top: 2rem;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    align-items: flex-start;
+  width: 100%;
+  margin-top: 2rem;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: flex-start;
 }
-
 body main .products-container .product {
-    background-color: #ffffff;
-    width: 12.5rem;
-    height: 21rem;
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    box-shadow: 0.5px 0.5px 0.5px 1px #a1a1a1;
-    border-radius: 0.2rem;
-    padding: 1rem;
-    margin: 0.2rem;
-    margin-bottom: 0.8rem;
+  background-color: var(--background);
+  width: 12.5rem;
+  height: 21rem;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  box-shadow: 0.5px 0.5px 0.5px 1px var(--dark-gray);
+  border-radius: 0.2rem;
+  padding: 1rem;
+  margin: 0.2rem;
+  margin-bottom: 0.8rem;
 }
-
 body main .products-container .product .favorite-remove {
-    display: flex;
-    flex-direction: row-reverse;
-    font-size: 1.5rem;
-    padding-bottom: 1rem;
+  display: flex;
+  flex-direction: row-reverse;
+  font-size: 1.5rem;
+  padding-bottom: 1rem;
 }
-
 body main .products-container .product .favorite {
-    width: 2.2rem;
-    height: 3rem;
-    margin-top: -1.25rem;
-    margin-left: -0.7rem;
-    background-color: black;
-    color: #fefaff;
-    border-radius: 0.2rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-    clip-path: polygon(0 0, 100% 0, 100% 79%, 50% 100%, 0 79%);
+  width: 2.2rem;
+  height: 3rem;
+  margin-top: -1.25rem;
+  margin-left: -0.7rem;
+  background-color: black;
+  color: var(--gray);
+  border-radius: 0.2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  clip-path: polygon(0 0, 100% 0, 100% 79%, 50% 100%, 0 79%);
 }
-
 body main .products-container .product .favorite-selected {
-    color: red;
+  color: var(--active);
 }
-
 body main .products-container .product p {
-    font-weight: bold;
-    margin-top: 1rem;
+  font-weight: bold;
+  margin-top: 1rem;
 }
-
 body main .products-container .product p:last-child {
-    margin-top: 2rem;
-    color: #e7d51c;
+  margin-top: 2rem;
+  color: var(--details);
 }
-
 body main .error {
-    display: flex;
-    flex-direction: column;
-    padding-top: 2rem;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  padding-top: 2rem;
+  align-items: center;
 }
-
 @media (min-width: 910px) {
-    body header {
-        flex-direction: row;
-        justify-content: space-between;
-        padding: 2.5rem 6rem 0.5rem 2rem;
-    }
-    body header .logo {
-        width: 25%;
-        padding-left: 10rem;
-    }
-    body header section {
-        width: 65%;
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-    }
-    body header section .menu {
-        display: flex;
-        width: 100%;
-        justify-content: space-between;
-        padding-bottom: 0.5rem;
-    }
-    body header section .search-container {
-        width: 100%;
-        text-align: end;
-        padding-bottom: 1.5rem;
-    }
-    body header section .search-container .search {
-        width: 100% !important;
-    }
-    body header section .search-container .search input {
-        width: 98% !important;
-        align-self: flex-end;
-    }
-    body main {
-        width: 70vw;
-        padding: 2rem 1.2rem;
-    }
-    body main .products-container {
-        display: grid;
-        grid-template-columns: repeat(4, 1fr);
-        justify-items: center;
-    }
+  body header {
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 2.5rem 6rem 0.5rem 2rem;
+  }
+  body header .logo {
+    width: 25%;
+    padding-left: 10rem;
+  }
+  body header section {
+    width: 65%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+  body header section .menu {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    padding-bottom: 0.5rem;
+  }
+  body header section .search-container {
+    width: 100%;
+    text-align: end;
+    padding-bottom: 1.5rem;
+  }
+  body header section .search-container .search {
+    width: 100% !important;
+  }
+  body header section .search-container .search input {
+    width: 98% !important;
+    align-self: flex-end;
+  }
+  body main {
+    width: 70vw;
+    padding: 2rem 1.2rem;
+  }
+  body main .products-container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    justify-items: center;
+  }
 }
-
 
 /*# sourceMappingURL=style.css.map */
