add jest in project
add jest in project

--- a/views/header.jade
+++ b/views/header.jade
@@ -7,7 +7,7 @@ block header
             div(class="menu")
                 div(class="option")
                     i(class="fas fa-map-marker-alt")
-                    span="cidade: São Paulo"
+                    span(id="cityName")="cidade: -"
                 div(class="option")
                     i(class="fas fa-phone-alt")
                     span="central de atendimento"
