add link in breadcump

--- a/public/stylesheets/scss/style.scss
+++ b/public/stylesheets/scss/style.scss
@@ -72,6 +72,12 @@ body {
         margin: auto;
         padding: 2rem 1rem 1rem 1rem;
         width: min(90vw, 910px);
+        .breadcump {
+            a {
+                color: black;
+                font-weight: bold;
+            }
+        }
         .products-container {
             width: 100%;
             margin-top: 2rem;
