--- a/public/stylesheets/scss/style.scss
+++ b/public/stylesheets/scss/style.scss
@@ -78,6 +78,11 @@ body {
                 font-weight: bold;
             }
         }
+        #emptyList {
+            padding-top: 2rem;
+            color: var(--purple);
+            text-align: center;
+        }
         .products-container {
             width: 100%;
             margin-top: 2rem;
@@ -174,6 +179,9 @@ body {
         main {
             width: 70vw;
             padding: 2rem 1.2rem;
+            #emptyList {
+                text-align: left;
+            }
             .products-container {
                 display: grid;
                 grid-template-columns: repeat(4, 1fr);
