--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -76,6 +76,11 @@ body main .breadcump a {
   color: black;
   font-weight: bold;
 }
+body main #emptyList {
+  padding-top: 2rem;
+  color: var(--purple);
+  text-align: center;
+}
 body main .products-container {
   width: 100%;
   margin-top: 2rem;
@@ -171,6 +176,9 @@ body main .error {
   body main {
     width: 70vw;
     padding: 2rem 1.2rem;
+  }
+  body main #emptyList {
+    text-align: left;
   }
   body main .products-container {
     display: grid;
